Cập nhật giao diện portfolio

--- a/index.html
+++ b/index.html
@@ -160,9 +160,7 @@
           <div>
             <h2 class="skills__subtitle">Profesional Skills</h2>
             <p class="skills__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
-              optio id vero amet, alias architecto consectetur error eum eaque
-              sit.
+              Website Developer, and More.
             </p>
             <div class="skills__data">
               <div class="skills__names">
@@ -205,7 +203,7 @@
                   src="assets/img/GitHub-Logo.wine.svg"
                   alt=""
                 />
-                <span class="skills__name">UX/UI</span>
+                <span class="skills__name">Github</span>
               </div>
               <div class="skills__bar skills__ux"></div>
               <div>
