--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             class="work__img"
           >
             <img
-              src="assets/img/img-taskmanage-project.jpg"
+              src="assets/img/taskmanage.png"
               alt="Task Manager Project"
             />
             <div class="work__overlay">
